--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,12 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginFragment">
 
-    <!-- TODO: Update blank fragment layout -->
 
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="329dp"
+        android:layout_height="541dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/Gradient" />
 
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="89dp"
+        android:src="@drawable/beerig_logo"
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="109dp" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/button4"
+        android:layout_width="266dp"
+        android:layout_height="65dp"
+        android:layout_above="@+id/button5"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/white_rec"
+        android:textColor="#585858"
+        android:textStyle="bold"
+        android:textSize="17sp"
+        android:text="@string/email_login" />
+
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="266dp"
+        android:layout_height="65dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="51dp"
+        android:background="@drawable/blue_rect"
+        android:text="@string/facebook_login"
+        android:textStyle="bold"
+        android:textSize="16sp"
+        android:textColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="347dp"
+        android:layout_height="163dp"
+        android:layout_centerInParent="true"
+        android:src="@drawable/Beerig" />
+
+</RelativeLayout>
