--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -9,19 +9,19 @@
 
     <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="329dp"
-        android:layout_height="541dp"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/Gradient" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:padding="0dp"
+        android:src="@drawable/gradient" />
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
+        android:layout_width="160dp"
+        android:layout_height="160dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="89dp"
+        android:layout_marginTop="68dp"
         android:src="@drawable/beerig_logo"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="109dp" />
@@ -53,9 +53,9 @@
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="347dp"
-        android:layout_height="163dp"
+        android:layout_width="450dp"
+        android:layout_height="200dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/Beerig" />
+        android:src="@drawable/beerig" />
 
 </RelativeLayout>
