--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="verylightBlue">#CEF0FF</color>
+    <color name="skyBlue">#09B1EF</color>
+    <color name="blue">#1262D9</color>
 </resources>
