--- a/Beerig_App/app/src/main/res/layout/activity_main.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/background"
+
+    >
 
 
+    <ImageView
+        android:id="@+id/Beerig_Logo"
+        android:contentDescription="@string/Beerig_Logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
 
-</android.support.constraint.ConstraintLayout>
+        android:layout_above="@id/Start_Partying"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+
+        android:src="@drawable/beerig_logo" />
+
+    <ImageButton
+        android:id="@+id/Start_Partying"
+        android:contentDescription="@string/Start_Partying"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+
+        android:layout_marginStart="50dp"
+        android:layout_marginEnd="50dp"
+        
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+
+        android:background="@android:color/transparent"
+        android:src="@drawable/start_partying_button"
+        />
+
+
+</RelativeLayout>
