--- a/Beerig_App/app/src/main/res/layout/activity_main.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity"
     android:background="@drawable/background" >
 
-    
+
     <!-- Background Image for main activity -->
     <!-- Use if android:background in RelativeLayout is not working -->
     <!--
@@ -17,10 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-
         android:scaleType="centerCrop"
         android:src="@drawable/background" />
-
      -->
 
     <!-- Image for the 'Beerig - Personal Bartender' Logo -->
@@ -29,12 +27,10 @@
         android:contentDescription="@string/Beerig_Logo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_above="@id/Start_Partying"
         android:layout_centerInParent="true"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-
         android:src="@drawable/beerig_logo" />
 
 
@@ -45,15 +41,14 @@
         android:contentDescription="@string/Start_Partying"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
-
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-
+        android:layout_marginBottom="50dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
-
+        android:clickable="true"
+        android:focusable="true"
+        android:onClick="startHomeActivity"
         android:background="@android:color/transparent"
         android:src="@drawable/start_partying_button" />
-
 
 </RelativeLayout>
