--- a/Beerig_App/app/src/main/res/layout/activity_main.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/background" >
+    android:background="@drawable/background"
+    android:clickable="true"
+    android:focusable="true"
+    android:onClick="startHomeActivity">
 
 
     <!-- Background Image for main activity -->
