--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -13,4 +14,4 @@
         android:gravity="center"
         android:text="@string/app_name"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
