--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -5,13 +5,64 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeScreen">
+    tools:context=".HomeScreen"
+    android:background="@drawable/beerig_logo"
+    android:backgroundTint="@color/light_grey">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:textAlignment="center"
-        android:gravity="center"
-        android:text="@string/app_name"/>
+
+    <Button
+        android:id="@+id/tequila"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:backgroundTint="@color/orange_red"
+        android:contentDescription="@string/tequila"
+        android:text="@string/tequila"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:onClick="startTequilaActivity" />
+
+    <Button
+        android:id="@+id/rum"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tequila"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/orange_red"
+        android:contentDescription="@string/rum"
+        android:text="@string/rum"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:onClick="startRumActivity"/>
+
+    <Button
+        android:id="@+id/gin"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/orange_red"
+        android:layout_below="@id/rum"
+        android:contentDescription="@string/gin"
+        android:text="@string/gin"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:onClick="startGinActivity"/>
+
+    <Button
+        android:id="@+id/vodka"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/gin"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/orange_red"
+        android:contentDescription="@string/vodka"
+        android:text="@string/vodka"
+        android:clickable="true"
+        android:focusable="true"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:onClick="startVodkaActivity"/>
 
 </RelativeLayout>
