--- a/Beerig_App/app/src/main/res/layout/activity_main.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_main.xml
@@ -32,8 +32,11 @@
         android:layout_height="wrap_content"
         android:layout_above="@id/Start_Partying"
         android:layout_centerInParent="true"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
         android:src="@drawable/beerig_logo" />
 
 
@@ -46,7 +49,7 @@
         android:layout_width="match_parent"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="75dp"
         android:layout_alignParentBottom="true"
         android:clickable="true"
         android:focusable="true"
