--- a/Beerig_App/app/src/main/res/values/colors.xml
+++ b/Beerig_App/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="light_grey">#D3D3D3</color>
+    <color name="orange_red">#FF4500</color>
 </resources>
