--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -5,64 +5,91 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomeScreen"
-    android:background="@drawable/beerig_logo"
-    android:backgroundTint="@color/light_grey">
+    tools:context=".HomeScreen" >
 
+    <ImageView
+        android:id="@+id/main_screen_background"
+        android:contentDescription="@string/app_name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:foregroundGravity="center"
+        android:background="@drawable/beerig_logo"
+        android:backgroundTint="@color/light_grey" />
 
-    <Button
+    <ImageView
+        android:id="@+id/choose_your_drink"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/Start_Partying"
+        android:layout_alignParentStart="true"
+        android:foregroundGravity="top"
+        android:src="@drawable/choose_title"/>
+
+    <ImageButton
         android:id="@+id/tequila"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:backgroundTint="@color/orange_red"
+        android:layout_marginTop="90dp"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/tequila"
-        android:text="@string/tequila"
+        android:src="@drawable/tequila_button"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:onClick="startTequilaActivity" />
 
-    <Button
+    <ImageButton
         android:id="@+id/rum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tequila"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="@color/orange_red"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/rum"
-        android:text="@string/rum"
+        android:src="@drawable/rum_button"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:onClick="startRumActivity"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/gin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="@color/orange_red"
+        android:backgroundTint="@android:color/transparent"
         android:layout_below="@id/rum"
         android:contentDescription="@string/gin"
-        android:text="@string/gin"
+        android:src="@drawable/gin_button"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:onClick="startGinActivity"/>
 
-    <Button
+    <ImageButton
         android:id="@+id/vodka"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gin"
-        android:layout_marginTop="50dp"
-        android:backgroundTint="@color/orange_red"
+        android:backgroundTint="@android:color/transparent"
         android:contentDescription="@string/vodka"
-        android:text="@string/vodka"
+        android:src="@drawable/vodka_button"
         android:clickable="true"
         android:focusable="true"
         android:foreground="?attr/selectableItemBackgroundBorderless"
         android:onClick="startVodkaActivity"/>
+
+    <ImageButton
+        android:id="@+id/party_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:background="@android:color/transparent"
+        android:clickable="true"
+        android:contentDescription="@string/Start_Partying"
+        android:focusable="true"
+        android:foregroundGravity="bottom"
+        android:src="@drawable/partymode_button" />
 
 </RelativeLayout>
