Added Party Mode activity. Still needs much work.

--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -89,6 +89,7 @@
         android:clickable="true"
         android:contentDescription="@string/Start_Partying"
         android:focusable="true"
+        android:onClick="startPartyModeActivity"
         android:foregroundGravity="bottom"
         android:src="@drawable/partymode_button" />
 
