--- a/Beerig_App/app/src/main/res/values/colors.xml
+++ b/Beerig_App/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="light_grey">#D3D3D3</color>
     <color name="orange_red">#FF4500</color>
+    <color name="very_light_grey">#E3E3E3</color>
 </resources>
