--- a/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_home_screen.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:foregroundGravity="center"
-        android:background="@drawable/beerig_logo"
-        android:backgroundTint="@color/light_grey" />
+        android:background="@drawable/beerig_logo_light"/>
 
     <ImageView
         android:id="@+id/choose_your_drink"
@@ -32,7 +31,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_marginTop="90dp"
-        android:backgroundTint="@android:color/transparent"
+        android:background="@null"
         android:contentDescription="@string/tequila"
         android:src="@drawable/tequila_button"
         android:clickable="true"
@@ -45,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tequila"
-        android:backgroundTint="@android:color/transparent"
+        android:background="@null"
         android:contentDescription="@string/rum"
         android:src="@drawable/rum_button"
         android:clickable="true"
@@ -57,7 +56,7 @@
         android:id="@+id/gin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="@android:color/transparent"
+        android:background="@null"
         android:layout_below="@id/rum"
         android:contentDescription="@string/gin"
         android:src="@drawable/gin_button"
@@ -71,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/gin"
-        android:backgroundTint="@android:color/transparent"
+        android:background="@null"
         android:contentDescription="@string/vodka"
         android:src="@drawable/vodka_button"
         android:clickable="true"
