--- a/Beerig_App/app/src/main/res/values/colors.xml
+++ b/Beerig_App/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff4500</color>
+    <color name="colorPrimaryDark">#f900000c</color>
+    <color name="colorAccent">#ff4500</color>
     <color name="light_grey">#D3D3D3</color>
     <color name="orange_red">#FF4500</color>
     <color name="very_light_grey">#E3E3E3</color>
