--- a/Beerig_App/app/src/main/res/layout/activity_rum.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_rum.xml
@@ -1,15 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RumActivity">
 
-    <TextView
+    <ImageView
+        android:id="@+id/rum_screen_title"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:text="@string/rum"/>
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/rum"
+        android:src="@drawable/rum_title"
+        android:foregroundGravity="top"
+        />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
