--- a/Beerig_App/app/src/main/res/layout/activity_vodka.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_vodka.xml
@@ -16,4 +16,28 @@
         android:foregroundGravity="top"
         />
 
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@id/vodka_screen_title"
+        android:layout_margin="10dp">
+
+        <ImageButton
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/drinkshape_container"
+            android:background="@android:color/transparent"
+            android:layout_margin="5dp"/>
+
+        <ImageButton
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/drinkshape_container"
+            android:background="@android:color/transparent"
+            android:layout_margin="5dp"/>
+
+    </TableRow>
+
 </RelativeLayout>
