--- a/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -9,43 +8,49 @@
 
     <ImageView
         android:id="@+id/party_time_logo"
-        android:contentDescription="@string/app_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:src="@drawable/party_title"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/app_name"
+        android:src="@drawable/party_title" />
 
     <ImageView
         android:id="@+id/party_mode_description"
-        android:contentDescription="@string/Start_Partying"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/party_description_para"
         android:layout_below="@id/party_time_logo"
-        android:background="@android:color/transparent" />
+        android:background="@android:color/transparent"
+        android:contentDescription="@string/Start_Partying"
+        android:src="@drawable/party_description_para"
+        android:padding="0dp"/>
 
     <ImageButton
         android:id="@+id/go_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:contentDescription="@string/Start_Partying"
-        android:src="@drawable/party_button"
-        android:background="@android:color/transparent"
         android:layout_below="@id/party_mode_description"
         android:layout_centerInParent="true"
-        android:layout_marginBottom="-50dp"
+        android:background="@android:color/transparent"
         android:clickable="true"
-        android:focusable="true"/>
+        android:contentDescription="@string/Start_Partying"
+        android:focusable="true"
+        android:src="@drawable/party_button"
+        android:padding="0dp"
+        android:layout_margin="0dp"/>
 
+    <!-- **Running into issues with this ImageView**
+         **Won't Display Properly on Screen**
     <ImageView
         android:id="@+id/lime_and_dime"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_below="@id/go_button"
+        android:background="@android:color/transparent"
         android:contentDescription="@string/Start_Partying"
         android:src="@drawable/lime_and_dime_para"
-        android:background="@android:color/transparent"
-        android:layout_below="@id/go_button"
-        />
+        android:scaleType="fitXY"
+        android:adjustViewBounds="true"/>
+    -->
 
 </RelativeLayout>
