--- a/Beerig_App/app/src/main/res/layout/activity_tequila.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_tequila.xml
@@ -16,28 +16,89 @@
         android:foregroundGravity="top"
         />
 
-    <TableRow
+    <TableLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@id/tequila_screen_title"
-        android:layout_margin="10dp">
+        android:stretchColumns="*">
 
-        <ImageButton
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/drinkshape_container"
-            android:background="@android:color/transparent"
-            android:layout_margin="5dp"/>
 
-        <ImageButton
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:contentDescription="@string/app_name"
-            android:src="@drawable/drinkshape_container"
-            android:background="@android:color/transparent"
-            android:layout_margin="5dp"/>
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp" >
 
-    </TableRow>
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                android:layout_margin="5dp"/>
 
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                android:layout_margin="5dp"/>
+
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                android:layout_margin="5dp"/>
+
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                android:layout_margin="5dp"/>
+
+        </TableRow>
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                />
+
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                />
+
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                />
+
+            <ImageButton
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:contentDescription="@string/app_name"
+                android:src="@drawable/drinkshape_container"
+                android:background="@android:color/transparent"
+                />
+        </TableRow>
+
+    </TableLayout>
 </RelativeLayout>
