--- a/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -22,22 +21,23 @@
         android:layout_below="@id/party_time_logo"
         android:background="@android:color/transparent"
         android:contentDescription="@string/Start_Partying"
+        android:padding="0dp"
         android:src="@drawable/party_description_para"
-        android:padding="0dp"/>
+        android:visibility="visible" />
 
     <ImageButton
         android:id="@+id/go_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/party_mode_description"
-        android:layout_centerInParent="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="5dp"
+        android:layout_marginTop="5dp"
         android:background="@android:color/transparent"
         android:clickable="true"
         android:contentDescription="@string/Start_Partying"
         android:focusable="true"
-        android:src="@drawable/party_button"
-        android:padding="0dp"
-        android:layout_margin="0dp"/>
+        android:src="@drawable/party_button" />
 
     <!-- **Running into issues with this ImageView**
          **Won't Display Properly on Screen**
