--- a/Beerig_App/app/src/main/res/layout/activity_rum.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_rum.xml
@@ -24,7 +24,7 @@
 
         <TableLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:stretchColumns="*">
 
 
