--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -11,8 +11,11 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:paddingTop="160dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
         android:textSize="32sp"
         android:textColor="#FFFFFF"
+        android:gravity="center"
         android:text="Here is the text describing the drink" />
 
     <TextView
