--- a/Beerig_App/app/src/main/res/layout/activity_rum.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_rum.xml
@@ -80,7 +80,8 @@
                    android:layout_margin="8dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
-                   android:src="@drawable/drinkshape_container" />
+                   android:src="@drawable/drinkshape_container"
+                   android:onClick="openDaiquiri"/>
 
             </TableRow>
 
